codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__external_writer_escape_offline_command_center.snap
---
source: tui/src/app/owned_transcript_tests.rs
assertion_line: 126
expression: "crate::chatwidget::tests::helpers::normalize_agent_center_snapshot(crate::chatwidget::tests::helpers::render_bottom_popup(&app.chat_widget,\n96,))"
---
 Elpis · model gpt-test default · location /tmp/project
  Agent command center  Group: Project  g
   All 0   Needs you 0   Working 0   Ready 0   Inactive 0                 tab/shift+tab filter
  ────────────────────────────────────────────────────────────────────────────────────────────
  Reconnecting…                                       │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
                                                      │
  Reconnecting — agent list is stale
