codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__owned_transcript_composer_gap.snap
---
source: tui/src/app/owned_transcript_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
Latest
Transcript row 35
Transcript row 36
Transcript row 37
Transcript row 38
Transcript row 39
Transcript row 40
 Elpis · model gpt-test default · location /tmp/project

│
› draft
│
                                        100% context left · Tab Context Ledger

Reading
Transcript row 30
Transcript row 31
Transcript row 32
Transcript row 33
Transcript row 34
Transcript row 35
 Elpis · model gpt-test default · location /tmp/project
                             ↓ Back to bottom · esc
│
› draft
│
  esc latest

Resized multiline composer
Transcript row 30
Transcript row 31
Transcript row 32
Transcript row 33
 Elpis · model gpt-test default · locati
         ↓ Back to bottom · esc
│
› draft
│ second line
│ third line
│
  esc latest

Tiny terminal
 Elpis · model gpt-test default · locati
│
› draft
│
  esc latest

Detailed
• Viewed image assets/detail-image.png





 Elpis · model gpt-test default · location /tmp/project

│
› preserved draft
│
                                        100% context left · Tab Context Ledger
