codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__prompt_navigation.snap
---
source: tui/src/app/owned_transcript_tests.rs
assertion_line: 1265
expression: "normalize_snapshot_paths(buffer_text(crate::custom_terminal::test_support::last_rendered_buffer(&tui.terminal)))"
---

› first question



› second question



› third question
 Elpis · model gpt-test default · location /tmp/project

───────────────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                                     │
───────────────────────────────────────────────────────────────────────────────┘
  Browsing · ↑↓ scroll · ←→ prompts · ctrl+t details · ↵ rewind · esc back
