codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__recap_tail_spacing.snap
---
source: tui/src/app/owned_transcript_tests.rs
expression: "normalize_snapshot_paths(snapshots.join(\"\\n\\n\"))"
---
80x10, Recap at tail
History 20

  ↳ Recap: The draft is ready.

 Elpis · model gpt-test default · location /tmp/project

┌──────────────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
  ? for shortcuts                       100% context left · Tab Context Ledger

80x10, Message after recap

  ↳ Recap: The draft is ready.

• Follow-up response.
 Elpis · model gpt-test default · location /tmp/project

┌──────────────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
  ? for shortcuts                       100% context left · Tab Context Ledger

80x10, Live message after recap

  ↳ Recap: The draft is ready.

• Streaming response.
 Elpis · model gpt-test default · location /tmp/project

┌──────────────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
  ? for shortcuts                       100% context left · Tab Context Ledger

80x12, Recap at tail
History 19
History 20

  ↳ Recap: The draft is ready.
           Next: Review the changes.

 Elpis · model gpt-test default · location /tmp/project

┌──────────────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
  ? for shortcuts                       100% context left · Tab Context Ledger

80x12, Message after recap
History 20

  ↳ Recap: The draft is ready.
           Next: Review the changes.

• Follow-up response.
 Elpis · model gpt-test default · location /tmp/project

┌──────────────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
  ? for shortcuts                       100% context left · Tab Context Ledger

80x12, Live message after recap
History 20

  ↳ Recap: The draft is ready.
           Next: Review the changes.

• Streaming response.
 Elpis · model gpt-test default · location /tmp/project

┌──────────────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
  ? for shortcuts                       100% context left · Tab Context Ledger

32x12, Recap at tail
History 20

  ↳ Recap: The draft is ready.
           Next: Review the
           changes.

 Elpis · model gpt-test default

┌──────────────────────────────┐
› Ask Elpis to do anything     │
└──────────────────────────────┘
             100% context left

32x12, Message after recap

  ↳ Recap: The draft is ready.
           Next: Review the
           changes.

• Follow-up response.
 Elpis · model gpt-test default

┌──────────────────────────────┐
› Ask Elpis to do anything     │
└──────────────────────────────┘
             100% context left

32x12, Live message after recap

  ↳ Recap: The draft is ready.
           Next: Review the
           changes.

• Streaming response.
 Elpis · model gpt-test default

┌──────────────────────────────┐
› Ask Elpis to do anything     │
└──────────────────────────────┘
             100% context left

80x7, Recap at tail
           Next: Review the changes.
 Elpis · model gpt-test default · location /tmp/project

┌──────────────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
  ? for shortcuts                       100% context left · Tab Context Ledger

80x7, Message after recap
• Follow-up response.
 Elpis · model gpt-test default · location /tmp/project

┌──────────────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
  ? for shortcuts                       100% context left · Tab Context Ledger

80x7, Live message after recap
• Streaming response.
 Elpis · model gpt-test default · location /tmp/project

┌──────────────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
  ? for shortcuts                       100% context left · Tab Context Ledger

32x6, Recap at tail
 Elpis · model gpt-test default

┌──────────────────────────────┐
› Ask Elpis to do anything     │
└──────────────────────────────┘
             100% context left

32x6, Message after recap
 Elpis · model gpt-test default

┌──────────────────────────────┐
› Ask Elpis to do anything     │
└──────────────────────────────┘
             100% context left

32x6, Live message after recap
 Elpis · model gpt-test default

┌──────────────────────────────┐
› Ask Elpis to do anything     │
└──────────────────────────────┘
             100% context left
