codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__tests__slash_picker_overlays_history.snap
---
source: tui/src/app/owned_transcript_tests.rs
expression: open_text
---
Transcript row 30: content behind the menu
Transcript row 31: content behind the menu
Transcript row 32: content behind the menu
Transcript row 33: content behind the menu
Transcript row 34: content behind the menu
› /model         choose what model and reasoning effort to use
  /memory-model  set background tasks (pruning and session naming); memory uses
                 the responding agent: /memory-model <id|provider:id|default>
  /mcp           list MCP tools; use /mcp verbose or /mcp login <name>

› /m

  gpt-test default · /tmp/project
  model high · fast
